# dhcpd

./: Cargo.toml  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse_v4_message.rs  parse_v4_options.rs  parse_v6_message.rs  parse_v6_options.rs
src/: config.rs  control.rs  error.rs  io.rs  io_punt.rs  lib.rs  main.rs  vpp_iface.rs
src/lease/: journal.rs  journal6.rs  mod.rs
src/packet/: mod.rs
src/packet/v4/: client_id.rs  header.rs  message.rs  mod.rs  options.rs
src/packet/v6/: duid.rs  header.rs  message.rs  mod.rs  options.rs
src/v4/: allocator.rs  fsm.rs  mod.rs  server.rs
src/v6/: allocator.rs  fsm.rs  mod.rs  pd_allocator.rs  route_installer.rs  server.rs
tests/: config_parse.rs
