[package]
name = "dhcpd"
version = "0.1.0"
edition = "2021"
description = "DHCPv4 + DHCPv6 (incl. IA_PD) daemon with direct VPP punt integration"
license = "AGPL-3.0-or-later"
authors = ["Justin Thomas"]

[dependencies]
vpp-api = { git = "https://github.com/justindthomas/vpp-api" }
ribd-proto = { git = "https://github.com/justindthomas/ribd" }
ribd-client = { git = "https://github.com/justindthomas/ribd" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
thiserror = "1"
anyhow = "1"
ipnet = "2"
nix = { version = "0.29", features = ["net", "socket"] }
async-trait = "0.1"
libc = "0.2"
bincode = "1"

[dev-dependencies]
tempfile = "3"

[lib]
name = "dhcpd"
path = "src/lib.rs"

[[bin]]
name = "dhcpd"
path = "src/main.rs"

# Local development overrides: if the sibling repos are checked out
# alongside this one (../vpp-api, ../ribd), use them in place of the
# git sources above. Harmless to anyone cloning just this repo —
# Cargo only consults `[patch]` entries whose paths resolve locally.
[patch."https://github.com/justindthomas/vpp-api"]
vpp-api = { path = "../vpp-api" }

[patch."https://github.com/justindthomas/ribd"]
ribd-proto = { path = "../ribd/ribd-proto" }
ribd-client = { path = "../ribd/ribd-client" }
